exports[`Card should match a diff card snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    dataNode={
        Object {
            "it": 666,
          }
    }
    location="tacolandiaville"
    schoolsSelected={
        Array [
            "ACADEMY 20",
            "COLORADO",
          ]
    } />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="card-header">
          tacolandiaville
</h1>,
        <div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              it
                              : 
                              666
                    </p>
          </div>
          <div>
                    <p
                              className="district-average">
                              District Average:  
                              666
                    </p>
          </div>
</div>,
      ],
      "className": "card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "tacolandiaville",
          "className": "card-header",
        },
        "ref": null,
        "rendered": "tacolandiaville",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                it
                                : 
                                666
                </p>
</div>,
            ],
            <div>
              <p
                            className="district-average">
                            District Average:  
                            666
              </p>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                it
                : 
                666
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "it",
                  ": ",
                  666,
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "it",
                ": ",
                666,
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="district-average">
                District Average:  
                666
</p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "District Average:  ",
                  666,
                ],
                "className": "district-average",
              },
              "ref": null,
              "rendered": Array [
                "District Average:  ",
                666,
              ],
              "type": "p",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="card-header">
            tacolandiaville
</h1>,
          <div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    it
                                    : 
                                    666
                        </p>
            </div>
            <div>
                        <p
                                    className="district-average">
                                    District Average:  
                                    666
                        </p>
            </div>
</div>,
        ],
        "className": "card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "tacolandiaville",
            "className": "card-header",
          },
          "ref": null,
          "rendered": "tacolandiaville",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <div
                  className="p-container">
                  <p
                                    className="more-than-half">
                                    it
                                    : 
                                    666
                  </p>
</div>,
              ],
              <div>
                <p
                                className="district-average">
                                District Average:  
                                666
                </p>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  it
                  : 
                  666
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "it",
                    ": ",
                    666,
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "it",
                  ": ",
                  666,
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="district-average">
                  District Average:  
                  666
</p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "District Average:  ",
                    666,
                  ],
                  "className": "district-average",
                },
                "ref": null,
                "rendered": Array [
                  "District Average:  ",
                  666,
                ],
                "type": "p",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the Card snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    dataNode={Object {}}
    location="Colorado"
    schoolsSelected={
        Array [
            "ACADEMY 20",
            "COLORADO",
          ]
    } />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="card-header">
          Colorado
</h1>,
        <div>
          <div>
                    <p
                              className="district-average">
                              District Average:  
                              NaN
                    </p>
          </div>
</div>,
      ],
      "className": "card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Colorado",
          "className": "card-header",
        },
        "ref": null,
        "rendered": "Colorado",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [],
            <div>
              <p
                            className="district-average">
                            District Average:  
                            NaN
              </p>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="district-average">
                District Average:  
                NaN
</p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "District Average:  ",
                  NaN,
                ],
                "className": "district-average",
              },
              "ref": null,
              "rendered": Array [
                "District Average:  ",
                NaN,
              ],
              "type": "p",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="card-header">
            Colorado
</h1>,
          <div>
            <div>
                        <p
                                    className="district-average">
                                    District Average:  
                                    NaN
                        </p>
            </div>
</div>,
        ],
        "className": "card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Colorado",
            "className": "card-header",
          },
          "ref": null,
          "rendered": "Colorado",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [],
              <div>
                <p
                                className="district-average">
                                District Average:  
                                NaN
                </p>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="district-average">
                  District Average:  
                  NaN
</p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "District Average:  ",
                    NaN,
                  ],
                  "className": "district-average",
                },
                "ref": null,
                "rendered": Array [
                  "District Average:  ",
                  NaN,
                ],
                "type": "p",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
